Modificaciones al html y css

--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
 
     <!--Aquí comienza el main que contiene el contenido principal-->
     <main>
+        <!--Banner-->
         <section class="main-banner">
             <img src="./Imagenes/banner2.jpg" alt="banner">
         </section>
 
+        <!--¿Quiénes somos?-->
         <section>
             <div class="main-container">
                 <img src="./Imagenes/doctor_prueba.jpg" alt="">
@@ -61,6 +63,7 @@
             </div>
         </section>
 
+        <!--Misión y visión-->
         <section>
             <div class="main-left-section">
                 <div class="main-left-section-logo">
@@ -79,6 +82,33 @@
                     <img src="./Imagenes/vision.jpg" alt="">
                     <!--<h2>VISIÓN</h2>-->
                 </div>
+            </div>
+        </section>
+
+        <!--Servicios-->
+        <section>
+            <div class="servicios-container-principal">
+                <div class="div-texto-servicios">
+                    <h2>SERVICIOS</h2>
+                </div>
+                <table>
+                    <tr class="tabla-fila">
+                        <td id="odontologia"><h3>ODONTOLOGÍA GENERAL</h3></td>
+                        <td id="ortodoncia"><h3>ORTODONCIA</h3></td>
+                        <td id="rehabilitacion"><h3>REHABILITACIÓN ORAL</h3></td>                     
+                    </tr>
+                    <tr class="tabla-fila">
+                        <td>Endodoncia</td>
+                        <td>Estética dental</td>
+                        <!--<td>Periodoncia</td>-->
+                        <td>Odontopediatría</td>
+                    </tr>
+                    <tr class="tabla-fila">
+                        <td>Implantología</td>
+                        <td>Ortopedia</td>
+                        <td>Cirugía oral y maxilofacial</td>
+                    </tr>
+                </table>
             </div>
         </section>
         
