Modificaciones al html y css 2

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
         <!--Banner-->
         <section class="main-banner">
-            <img src="./Imagenes/banner2.jpg" alt="banner">
+            <img src="./Imagenes/banner.jpg" alt="banner">
         </section>
 
         <!--¿Quiénes somos?-->
@@ -93,20 +93,20 @@
                 </div>
                 <table>
                     <tr class="tabla-fila">
-                        <td id="odontologia"><h3>ODONTOLOGÍA GENERAL</h3></td>
-                        <td id="ortodoncia"><h3>ORTODONCIA</h3></td>
-                        <td id="rehabilitacion"><h3>REHABILITACIÓN ORAL</h3></td>                     
+                        <td id="odontologia"><img src="./Imagenes/dentista.png" alt=""><h3>ODONTOLOGÍA GENERAL</h3></td>
+                        <td id="ortodoncia"><img src="./Imagenes/tirantes.png" alt=""><h3>ORTODONCIA</h3></td>
+                        <td id="rehabilitacion"><img src="./Imagenes/carillas-dentales.png" alt=""><h3>REHABILITACIÓN ORAL</h3></td>                     
                     </tr>
                     <tr class="tabla-fila">
-                        <td>Endodoncia</td>
-                        <td>Estética dental</td>
+                        <td><img src="./Imagenes/canal-raiz.png" alt=""><h3>ENDODONCIA</h3></td>
+                        <td><img src="./Imagenes/blanqueamiento-dental.png" alt=""><h3>ESTÉTICA DENTAL</h3></td>
                         <!--<td>Periodoncia</td>-->
-                        <td>Odontopediatría</td>
+                        <td><img src="./Imagenes/odontopediatria_icono.png"><h3>ODONTOPEDIATRÍA</h3></td>
                     </tr>
                     <tr class="tabla-fila">
-                        <td>Implantología</td>
-                        <td>Ortopedia</td>
-                        <td>Cirugía oral y maxilofacial</td>
+                        <td><img src="./Imagenes/puentes.png" alt=""><h3>IMPLANTOLOGÍA</h3></td>
+                        <td><img src="./Imagenes/cirugia-plastica.png" alt=""><h3>ORTOPEDIA</h3></td>
+                        <td><img src="./Imagenes/bisturi.png" alt=""><h3>CIRUGÍA ORAL Y MAXILOFACIAL</h3></td>
                     </tr>
                 </table>
             </div>
